# Workflow-Fabric

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
awf/: __init__.py
awf/adapters/: __init__.py  base.py
awf/adapters/autogen/: __init__.py  adapter.py
awf/adapters/crewai/: __init__.py  adapter.py
awf/adapters/langgraph/: __init__.py  adapter.py  executor.py  manifest.py
awf/agents/: __init__.py  watcher.py
awf/api/: __init__.py  app.py  models.py
awf/cli/: __init__.py  agents.py  main.py  server.py  tasks.py  workflows.py
awf/core/: __init__.py  types.py
awf/mcp/: __init__.py  server.py
awf/orchestration/: __init__.py  dag.py  errors.py  events.py  executor.py  mapping.py  orchestrator.py  otel_exporter.py  registry.py  state.py  types.py  validation.py
awf/providers/: __init__.py  anthropic.py  antigravity.py  base.py  google.py  mistral.py  ollama.py  openai.py
awf/registry/: __init__.py  memory.py  persistence.py  search.py
awf/security/: __init__.py  policy.py  sandbox.py  trust.py
docker/grafana/: docker-compose.yml
docker/grafana/config/: alloy-config.alloy  loki-config.yaml  mimir-config.yaml  tempo-config.yaml
docker/grafana/config/rules/: slo-rules.yaml
docker/grafana/dashboards/: agent-fleet-health.json  awf-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
docs/: deploying-with-grafana.md  epics-and-stories.md  grafana-dashboards.md  grafana-integration-prd.md  opencode-integration-complete.txt  opencode-integration.md  orchestration-engine-prd.md  user-stories.md  watcher-agent-guide.md
examples/: llm_providers.py  quickstart.py
examples/code_review/: main.py
examples/customer_support/: main.py
examples/research_pipeline/: __init__.py  main.py
research/: interview-guide.md  personas.md  synthesis-framework.md
research/analysis/: affinity-map.md
research/templates/: consent-form.md  debrief-template.md
research/tracking/: insights-database.md  participant-tracker.md
spec/: asp-http-binding.md  asp-specification.md  trust-scoring.md
spec/schemas/: event.json  manifest.json  task-result.json  task.json
tests/: __init__.py  conftest.py  test_adapters_base.py  test_api.py  test_autogen_adapter.py  test_core_types.py  test_dag.py  test_executor.py  test_integration_e2e.py  test_langgraph_adapter.py  test_orchestration_types.py  test_orchestrator.py  test_registry.py  test_security.py  test_validation_mapping.py  test_watcher.py
web/: Dockerfile  index.html  nginx.conf  package.json
web/src/: App.tsx
web/src/components/: AgentNode.tsx  Layout.tsx
web/src/pages/: Agents.tsx  Dashboard.tsx  Executions.tsx  WorkflowBuilder.tsx  Workflows.tsx
