[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workflow-fabric"
version = "0.1.0"
description = "AI Workflow Fabric - Middleware for orchestrating AI agents across frameworks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AI Workflow Fabric Contributors" }
]
keywords = [
    "ai",
    "agents",
    "orchestration",
    "langgraph",
    "crewai",
    "autogen",
    "middleware",
    "workflow",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.0",
]
crewai = [
    "crewai>=0.50.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
all = [
    "ai-workflow-fabric[langgraph,crewai,autogen]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/CryptoDoru/Workflow-Fabric"
Documentation = "https://github.com/CryptoDoru/Workflow-Fabric#readme"
Repository = "https://github.com/CryptoDoru/Workflow-Fabric"
Issues = "https://github.com/CryptoDoru/Workflow-Fabric/issues"
Changelog = "https://github.com/CryptoDoru/Workflow-Fabric/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["awf"]

[tool.hatch.build.targets.sdist]
include = [
    "/awf",
    "/spec",
    "/docs",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "crewai.*",
    "autogen.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B017",   # assertRaises(Exception)
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["awf"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 100

[tool.coverage.run]
source = ["awf"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
